<resources>
    <string name="app_name">My NutriscanApplication</string>
    <string name="nutriscan">Nutriscan</string>
    <string name="login">Login</string>
    <string name="courriel">E-mail</string>
    <string name="password">Password</string>
    <string name="password_forget">Password forget?</string>
    <string name="inscription">Inscription</string>
    <string name="connection">Connection</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="password_confirme">Password confirme</string>
    <string name="next">Next</string>
    <string name="favoris">Favoris</string>
    <string name="picture">Put a picture</string>
    <string name="Enregistrer">Confirme</string>
    <string name="description">Description</string>
    <string name="affiche">Cette application consiste à aider un ou plusieurs utilisateurs à prendre en photo un produit naturel ou manufacturé pour en extraire les différentes informations tel que les calories, les informations minéraux, etc...</string>
</resources>