<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionActivity2">

    <TextView
        android:id="@+id/inscriptiontextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/inscription"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/surnametextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="109dp"
        android:text="@string/surname"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="217dp"
        android:layout_height="57dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.397"
        app:layout_constraintStart_toEndOf="@+id/surnametextView"
        app:layout_constraintTop_toBottomOf="@+id/inscriptiontextView" />

    <TextView
        android:id="@+id/nametextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="56dp"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surnametextView" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="224dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/passwordtextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="58dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nametextView" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="231dp"
        android:layout_height="70dp"
        android:layout_marginStart="3dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/passwordtextView1"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
        app:layout_constraintTop_toTopOf="@+id/passwordtextView1" />

    <TextView
        android:id="@+id/confirmetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="4dp"
        android:text="@string/password_confirme"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordtextView1" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="230dp"
        android:layout_height="63dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="@string/password_confirme"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirmetextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirmetextView"
        app:layout_constraintTop_toTopOf="@+id/confirmetextView" />

    <TextView
        android:id="@+id/mailtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="124dp"
        android:text="@string/courriel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="226dp"
        android:layout_height="54dp"
        android:layout_marginStart="66dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:hint="@string/courriel"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mailtextView"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

    <Button
        android:id="@+id/next1button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="47dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2" />
</androidx.constraintlayout.widget.ConstraintLayout>