<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <ImageView
        android:id="@+id/editimageView"
        android:layout_width="66dp"
        android:layout_height="61dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editimageView">

        <EditText
            android:id="@+id/nameeditTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/surnameeditTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/confirmebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Enregistrer" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>