<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MotdepasseoublieActivity">

    <TextView
        android:id="@+id/forgetpasstextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/password_forget"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emailtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="23dp"
        android:text="@string/courriel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextEmailAddress3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress3"
        android:layout_width="260dp"
        android:layout_height="66dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="424dp"
        android:ems="10"
        android:hint="@string/courriel"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emailtextView"
        app:layout_constraintTop_toBottomOf="@+id/forgetpasstextView" />

    <EditText
        android:id="@+id/editTextTextPassword4"
        android:layout_width="260dp"
        android:layout_height="71dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passtextView"
        app:layout_constraintTop_toBottomOf="@+id/emailtextView"
        app:layout_constraintVertical_bias="0.035" />

    <EditText
        android:id="@+id/editTextTextPassword5"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="128dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/passtextView" />

    <TextView
        android:id="@+id/passtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="9dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword4"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPassword4"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passconfirmetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="15dp"
        android:text="@string/password_confirme"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next2button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>