<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datetextView" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="178dp"
        android:layout_height="51dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toStartOf="@+id/datetextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/datetextView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="153dp"
        android:layout_height="54dp"
        android:layout_marginStart="79dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/datetextView"
        app:layout_constraintEnd_toStartOf="@+id/profilimageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profilimageButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/datetextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="58dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toBottomOf="@+id/profilimageButton" />

    <ImageButton
        android:id="@+id/profilimageButton"
        android:layout_width="62dp"
        android:layout_height="56dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="13dp"
        android:contentDescription="Image"
        app:layout_constraintBottom_toTopOf="@+id/datetextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="407dp"
        android:layout_height="37dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/profilimageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/title_bar"
        tools:srcCompat="@color/purple_700" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <ImageButton
            android:id="@+id/PictureimageButton"
            android:layout_width="97dp"
            android:layout_height="93dp"
            android:contentDescription="@string/picture"
            android:text="@string/picture"
            android:textAlignment="center"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/FavorisimageButton"
                android:layout_width="22dp"
                android:layout_height="81dp"
                android:layout_weight="1"
                android:contentDescription="@string/favoris"
                app:srcCompat="@android:drawable/star_big_on" />

            <ImageButton
                android:id="@+id/ParameterimageButton"
                android:layout_width="14dp"
                android:layout_height="74dp"
                android:layout_weight="1"
                android:contentDescription="Parameter"
                app:srcCompat="@drawable/para" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>